feat(examples): add simulated-user support for WebSocket chat
Add independent session management for simulated conversations:
- New API endpoint POST /api/session/new for creating isolated sessions
- Query parameter support for session IDs (?session=xxx)
- Custom browser-chat-provider.js bridges simulated-user with WebSocket
- New promptfooconfig-simulated.yaml with simulated user tests
- Each simulated conversation gets independent context
- Supports both browser automation and simulated-user testing

--- a/examples/browser-websocket-chat/public/chat.html
+++ b/examples/browser-websocket-chat/public/chat.html
@@ -291,7 +291,10 @@
       // Connect to WebSocket server
       function connect() {
         const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-        ws = new WebSocket(`${protocol}//${window.location.host}`);
+        // Include session query parameter if present in URL
+        const params = new URLSearchParams(window.location.search);
+        const sessionParam = params.get('session') ? `?session=${params.get('session')}` : '';
+        ws = new WebSocket(`${protocol}//${window.location.host}${sessionParam}`);
 
         ws.onopen = () => {
           console.log('WebSocket connected');
